config/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>jigsaw_clean__Automatic_Updates_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Automatic_Updates__c</fullName>
        <formula>IF(jigsaw_clean__Automatic_Updates_Disabled__c, &quot;Locked&quot;, &quot;Unlocked&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Jigsaw administrators can enable auto-clean to update your CRM records. Click Lock or Unlock to lock or unlock your CRM records. Jigsaw&apos;s auto-clean function can NOT modify a Locked record. Jigsaw&apos;s auto-clean function can modify an Unlocked record.</inlineHelpText>
        <label>Update Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__CRM_Last_Modified__c</fullName>
        <label>Data.com CRM Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Duplicate_Id__c</fullName>
        <label>Duplicate Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Duplicate__c</fullName>
        <formula>IF (LEN (jigsaw_clean__Duplicate_Id__c )=0,&quot;None Found&quot;, (IMAGE(&quot;/resource/jigsaw_clean__duplicate&quot;, &quot;D&quot;)) + &quot; &quot; + HYPERLINK(&quot;/apex/jigsaw_clean__jigsawLeadDuplicates?id=&quot; + jigsaw_clean__Duplicate_Id__c, &quot;Duplicates Found&quot;, &quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Jigsaw checks your CRM data to find duplicate records. When duplicate records are found, a link is provided so that you can view the duplicate records. &quot;None Found&quot; is displayed if no duplicates were identified.</inlineHelpText>
        <label>Duplicate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Fresher__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>Fresher</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Graveyard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Graveyard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Created_Date__c</fullName>
        <label>Data.com Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Id__c</fullName>
        <label>Data.com Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Last_Modified_Date__c</fullName>
        <label>Data.com Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Last_Sync_Locked__c</fullName>
        <formula>jigsaw_clean__Last_Sync__c</formula>
        <inlineHelpText>This field shows you the last time that Jigsaw&apos;s auto-clean process checked your CRM record against the Jigsaw database.</inlineHelpText>
        <label>Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Managed_Backend__c</fullName>
        <formula>IF( 
OR( 
( jigsaw_clean__Sync_Status__c = &quot;I&quot; ), 
( jigsaw_clean__Sync_Status__c = &quot;O&quot;) 
), 
1,0 
)</formula>
        <label>Managed Backend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Managed__c</fullName>
        <formula>IF( 
OR( ( jigsaw_clean__Sync_Status__c = &quot;I&quot; ) , ( jigsaw_clean__Sync_Status__c = &quot;O&quot; ) ),
&quot;Managed&quot; , &quot;Unmanaged&quot; )</formula>
        <label>Managed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Sourced__c</fullName>
        <formula>IF( ISPICKVAL(  LeadSource , &quot;Jigsaw&quot; ), 1 , 0 )</formula>
        <label>Data.com Sourced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Sync_Activity__c</fullName>
        <label>Sync Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Last_Sync__c</fullName>
        <label>Last Checked Backend</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Silent_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Silent Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Sync_Status_Indicator__c</fullName>
        <formula>IF(jigsaw_clean__Graveyard__c, (IMAGE(&quot;/resource/jigsaw_clean__graveyard&quot;, &quot;G&quot;)) + &quot; Graveyard&quot;,
IF(AND (!jigsaw_clean__Graveyard__c,
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;I&quot; )),
(IMAGE(&quot;/resource/jigsaw_clean__insync&quot;, &quot;I&quot;)) + &quot; Matching&quot;,
IF(AND (!jigsaw_clean__Graveyard__c,
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;O&quot; ),
CONTAINS (jigsaw_clean__Fresher__c, &quot;J&quot;)),
(IMAGE(&quot;/resource/jigsaw_clean__outofsync&quot;, &quot;O&quot;)) + &quot; Different -&quot; + HYPERLINK( &quot;/apex/jigsaw_clean__JStareAndCompareLead?scontrolCaching=1&amp;id=&quot; &amp; Id,&quot; Data.com Fresher&quot;,&quot;_parent&quot;),
IF(AND (!jigsaw_clean__Graveyard__c,
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;O&quot; ),
CONTAINS (jigsaw_clean__Fresher__c, &quot;C&quot;)),
(IMAGE(&quot;/resource/jigsaw_clean__outofsync&quot;, &quot;O&quot;)) + &quot;Different -&quot; + HYPERLINK( &quot;/apex/jigsaw_clean__JStareAndCompareLead?scontrolCaching=1&amp;id=&quot; &amp; Id, &quot; Salesforce Fresher&quot;,&quot;_parent&quot;),
IF(AND (!jigsaw_clean__Graveyard__c,
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;U&quot; )),
(IMAGE(&quot;/resource/jigsaw_clean__unmatched&quot;, &quot;U&quot;)) + &quot; Not Found&quot;,
(IMAGE(&quot;/resource/jigsaw_clean__unmatched&quot;, &quot;U&quot;)) + &quot; Not Found&quot;)))))</formula>
        <inlineHelpText>Matching -A Jigsaw managed record exactly matches your CRM record; Different -A Jigsaw managed record partially matches your CRM record; In Graveyard -A CRM record matches a Jigsaw record containing invalid data; Not Found -No matching record was found</inlineHelpText>
        <label>Data.com Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Sync_Status_Summary__c</fullName>
        <formula>IF(jigsaw_clean__Graveyard__c, &quot;Graveyard&quot;, 
IF(AND (!jigsaw_clean__Graveyard__c, 
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;I&quot; )), 
&quot;Matching&quot;, 
IF(AND (!jigsaw_clean__Graveyard__c, 
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;O&quot; )), 
&quot;Different&quot;, 
IF(AND (!jigsaw_clean__Graveyard__c, 
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;U&quot; )), 
&quot;Not Found&quot;, 
&quot;Not Found&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Status Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Sync_Status__c</fullName>
        <label>Update Status Backend</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Unconverted_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>My Unconverted Leads</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>6/27/2011 12:00 AM</value>
        </filters>
        <filters>
            <field>jigsaw_clean__Jigsaw_Id__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <label>Today&apos;s Jigsaw Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
</CustomObject>